--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,24 +1,30 @@
-# Basic set up for three package managers
+# `dependabot.yml` file with updates
+# disabled for Docker and limited for npm
 
 version: 2
 updates:
-
-  # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
+  # Configuration for Dockerfile
+  - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
+      # Disable all pull requests for Docker dependencies
+    open-pull-requests-limit: 0
 
-  # Maintain dependencies for npm
+  # Configuration for npm
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
-
-  # Maintain dependencies for Composer
-  - package-ecosystem: "composer"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-
+    ignore:
+      # Ignore updates to packages that start with 'aws'
+      # Wildcards match zero or more arbitrary characters
+      - dependency-name: "aws*"
+      # Ignore some updates to the 'express' package
+      - dependency-name: "express"
+        # Ignore only new versions for 4.x and 5.x
+        versions: ["4.x", "5.x"]
+      # For all packages, ignore all patch updates
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
 
